file(GLOB_RECURSE TEST_SOURCES CONFIGURE_DEPENDS *.cpp)

foreach(test_src ${TEST_SOURCES})
    get_filename_component(test_name ${test_src} NAME_WE)
    add_executable(${test_name} ${test_src})
    target_link_libraries(${test_name} PRIVATE CSRMatrix ) 
    target_link_libraries(${test_name} PRIVATE MSRMatrix) 
    target_link_libraries(${test_name} PRIVATE matrixUtils) 
    target_link_libraries(${test_name} PRIVATE gmresUtils)
endforeach()
